# remy

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.botapi.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: bootstrap.sh  env.example  migrate-to-remy.sh  remy-bot.service  tokcut-bot.service
docs/: BOT.md  BOT_ARCHITECTURE.md  DEPLOY.md  IDEAS.md  USAGE.md  video-pipeline-discovery.md
remy/: __init__.py  analysis.py  caption.py  cli.py  judge.py  layout.py  music.py  render.py  types.py
remy/bot/: __init__.py  app.py  config.py  features.py  pipeline.py  session.py
scripts/: record_tiktok_screen.sh
tests/: test_analysis.py  test_bot.py  test_caption.py  test_judge.py  test_layout.py  test_music.py  test_pro_cuts.py  test_render.py  test_session.py
tokcut/: analysis.py  caption.py  cli.py  judge.py  layout.py  music.py  render.py  types.py
tokcut/bot/: app.py  config.py  pipeline.py  session.py
