[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "remy"
version = "0.1.0"
description = "Personal auto-editor for vertical TikTok clips (speed-ramp + caption + music)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "vyahello", email = "vyahello@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.8"]
# pedalboard: pro mastering chain for the generated music (the bot
# deploy installs it; music.py falls back gracefully without it)
bot = ["python-telegram-bot>=21", "pedalboard>=0.9"]

[project.scripts]
remy = "remy.cli:main"
remy-bot = "remy.bot.app:main"
# Legacy aliases: the deployed systemd unit runs `tokcut-bot`. Keep these
# until the VPS is migrated to the remy-* names (see docs/DEPLOY.md).
tokcut = "remy.cli:main"
tokcut-bot = "remy.bot.app:main"

[project.urls]
Homepage = "https://github.com/vyahello/remy"

[tool.setuptools.packages.find]
include = ["remy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = ["remy"]
